tests/ui/fail_user_error_scheme_invalid_arg.rs
#[thin_delegate::fill_delegate(scheme = |f @ Fuga| f(&self.key()))]
impl Hello for Hoge {}

fn main() {}
